[GTK] Leak: GFile* leaking in beginDragWithFilesCallback https://bugs.webkit.org/show_bug.cgi?id=118412

Patch by Brian Holt <brian.holt@samsung.com> on 2013-07-08
Reviewed by Martin Robinson.

An adoptRef is required to balance ref and deref calls.

* DumpRenderTree/gtk/EventSender.cpp:
(beginDragWithFilesCallback):

Canonical link: https://commits.webkit.org/136432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152444 268f45cc-cd09-0410-ab3c-d52691b4dbfc